# mirage

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  MANUAL.md  README.md
.planning/: PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md
.planning/phases/01-database-foundation/: 01-01-PLAN.md  01-01-SUMMARY.md  01-02-PLAN.md  01-02-SUMMARY.md  01-03-PLAN.md  01-03-SUMMARY.md  01-VERIFICATION.md
.planning/phases/02-cfg-construction/: 02-01-SUMMARY.md  02-02-SUMMARY.md  02-03-SUMMARY.md  02-04-SUMMARY.md  02-05-SUMMARY.md  02-06-SUMMARY.md  02-RESEARCH.md
.planning/phases/03-reachability-control/: 03-01-SUMMARY.md  03-02-SUMMARY.md  03-03-SUMMARY.md  03-04-SUMMARY.md  03-RESEARCH.md  03-reachability-control-VERIFICATION.md
.planning/phases/04-dominance-analysis/: 04-01-PLAN.md  04-01-SUMMARY.md  04-02-PLAN.md  04-02-SUMMARY.md  04-03-PLAN.md  04-03-SUMMARY.md  04-RESEARCH.md
.planning/phases/05-path-enumeration/: 05-01-SUMMARY.md  05-02-SUMMARY.md  05-03-SUMMARY.md  05-04-SUMMARY.md  05-05-SUMMARY.md  05-06-SUMMARY.md  05-RESEARCH.md
.planning/phases/06-cli-interface/: 06-01-PLAN.md  06-01-SUMMARY.md  06-02-PLAN.md  06-02-SUMMARY.md  06-03-PLAN.md  06-03-SUMMARY.md  06-04-PLAN.md  06-04-SUMMARY.md  06-05-PLAN.md  06-05-SUMMARY.md  06-06-PLAN.md  06-06-SUMMARY.md  06-07-PLAN.md  06-07-SUMMARY.md  06-RESEARCH.md  06-cli-interface-VERIFICATION.md
.planning/phases/07-llm-integration/: 07-01-PLAN.md  07-01-SUMMARY.md  07-02-PLAN.md  07-02-SUMMARY.md  07-03-PLAN.md  07-03-SUMMARY.md  07-04-PLAN.md  07-04-SUMMARY.md  07-RESEARCH.md  07-llm-integration-VERIFICATION.md
.planning/phases/08-drift-remediation-wire-unimplemented-features/: 08-01-SUMMARY.md  08-02-SUMMARY.md  08-03-SUMMARY.md  08-04-SUMMARY.md  08-05-SUMMARY.md  08-06-SUMMARY.md  08-RESEARCH.md
.planning/phases/09-mir-integration-database-loading/: 09-01-PLAN.md  09-01-SUMMARY.md  09-02-PLAN.md  09-02-SUMMARY.md  09-03-PLAN.md  09-03-SUMMARY.md  09-04-PLAN.md  09-VERIFICATION.md  DRIFT-ANALYSIS.md
.planning/phases/09-testing-test-infrastructure/: 09-RESEARCH.md
.planning/phases/10-magellan-v2-integration-and-bugfixes/: .continue-here.md  10-01-PLAN.md  10-01-SUMMARY.md  10-02-PLAN.md  10-02-SUMMARY.md  10-03-PLAN.md  10-03-SUMMARY.md  10-04-PLAN.md  10-04-SUMMARY.md  10-05-PLAN.md  10-05-SUMMARY.md  10-RESEARCH.md  10-VERIFICATION.md
.planning/phases/11-inter-procedural-dominance-hotspots-and-smart-reindexing/: 11-01-SUMMARY.md  11-02-SUMMARY.md  11-03-SUMMARY.md  11-04-SUMMARY.md  11-05-SUMMARY.md  11-06-SUMMARY.md  11-VERIFICATION.md
.planning/phases/12-magellan-cfg-integration/: 12-RESEARCH.md
.planning/phases/14-native-v2-io-integration/: 14-01-SUMMARY.md  14-02-SUMMARY.md  14-03-SUMMARY.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
docs/: ARCHITECTURE.md  CONCEPT.md  ECOSYSTEM_CONTEXT.md
src/: lib.rs  main.rs  platform.rs
src/analysis/: mod.rs
src/cfg/: analysis.rs  ast.rs  diff.rs  dominance_frontiers.rs  dominators.rs  edge.rs  export.rs  git_utils.rs  hotpaths.rs  icfg.rs  loops.rs  mir.rs  mod.rs  paths.rs  patterns.rs  post_dominators.rs  reachability.rs  source.rs  summary.rs
src/cli/: mod.rs
src/mir/: charon.rs  mod.rs
src/output/: mod.rs
src/storage/: kv_backend.rs  mod.rs  paths.rs  sqlite_backend.rs
tests/: backend_parity_test.rs  database_integration.rs  integration_test.rs
