[package]
name = "mirage"
version = "0.1.0"
edition = "2021"
rust-version = "1.77"
authors = ["Mirage Contributors"]
description = "Path-Aware Code Intelligence Engine for Rust"
repository = "https://github.com/oldnordic/mirage"
documentation = "https://docs.rs/mirage"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["code-analysis", "cfg", "path-enumeration", "rust", "mir", "control-flow"]
categories = ["development-tools", "development-tools::testing", "command-line-utilities"]

[[bin]]
name = "mirage"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Magellan v2.0.0 for inter-procedural analysis
magellan = "2.0"
# Re-export sqlitegraph version used by Magellan
sqlitegraph = "1.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph data structures
petgraph = "0.8"

# AST parsing (for non-Rust code fallback)
tree-sitter = "0.22"

# MIR extraction (rustc internals - requires nightly)
# Note: These are optional and will be implemented later
# For now, we'll use external tools like Charon or rustc -Z dump-mir

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
blake3 = "1.5"
sha2 = "0.10"
atty = "0.2"
chrono = "0.4"

[dev-dependencies]
tempfile = "3.10"

[features]
default = []
# MIR extraction features will be added in Milestone 1
# For now, we'll use external tools (rustc -Z dump-mir or Charon)

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
