[package]
name = "mirage-analyzer"
version = "1.0.1"
edition = "2021"
rust-version = "1.70"
authors = ["Mirage Contributors"]
description = "Path-Aware Code Intelligence Engine for Rust"
repository = "https://github.com/oldnordic/mirage"
documentation = "https://docs.rs/mirage-analyzer"
readme = "README.md"
license = "GPL-3.0-or-later"
keywords = ["code-analysis", "cfg", "path-enumeration", "mir", "control-flow"]
categories = ["development-tools", "development-tools::testing", "command-line-utilities"]

[[bin]]
name = "mirage"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Database
rusqlite = { version = "0.31", features = ["bundled"] }

# Magellan for inter-procedural analysis
magellan = { version = "2.2", optional = true }
# sqlitegraph for GraphBackend trait (required for dual backend support)
sqlitegraph = "1.5"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Graph data structures
petgraph = "0.8"

# AST parsing (for non-Rust code fallback)
tree-sitter = "0.22"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utils
blake3 = "1.5"
sha2 = "0.10"
is-terminal = "0.4"
chrono = "0.4"
git2 = "0.18"

[dev-dependencies]
tempfile = "3.10"

[features]
# Platform feature model - explicit opt-in required
default = ["unix", "backend-sqlite"]
unix = []
windows = []

# Backend selection - choose one (mutually exclusive)
# Use backend-sqlite (default) or backend-native-v2, not both
backend-sqlite = ["magellan", "sqlitegraph/sqlite-backend"]
# Alias for backward compatibility
sqlite = ["backend-sqlite"]
# Native V2 backend (newer I/O layer)
backend-native-v2 = ["magellan/native-v2", "sqlitegraph/native-v2"]
# Alias for convenience
native-v2 = ["backend-native-v2"]

# MIR extraction features will be added in Milestone 1

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
